# MHDShellExtensions

./: .gitignore  CMakeLists.txt  MHDIconHandler.cpp  MHDIconHandler.def  MHDIconHandler.h  MHDInfotip.cpp  MHDInfotip.def  MHDInfotip.h  MHDPreviewHandler.cpp  MHDPreviewHandler.def  MHDPreviewHandler.h  MHDPropertyStore.cpp  MHDPropertyStore.def  MHDPropertyStore.h  README.md  debug_nrrd.cpp  libmhd.cpp  libmhd.h  libnrrd.cpp  libnrrd.h  mhd_parser.cpp
.github/workflows/: package.yml
lib/: libparse.cpp  libparse.h  mhd.cpp  mhd.h  nifti.cpp  nifti.h  nrrd.cpp  nrrd.h  parser_base.cpp  parser_base.h
res/: icons.rc
scripts/: associate.reg  backup_registry.bat  delete_usechoice.reg  register.bat  set_property.reg  unregister.bat
test/: CMakeLists.txt  exception.cpp  nifti1.h  normal.cpp  print_header.cpp
test/file/normal/: normal.mhd
